dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.53 2011/11/10 13:00:33 jjg Exp jjg $

AC_INIT(cptutils, 1.41, j.j.green@gmx.fr)

CFXTRA="-Wall"

dnl Checks for programs.

AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_PATH_PROG(GGO,gengetopt,no)
if test "$GGO" = no; then
  AC_MSG_WARN(no gengetopt! (you should be able to build though))       
fi

AC_PATH_PROG(GPERF,gperf,no)
if test "$GPERF" = no; then
  AC_MSG_WARN(no gperf! (you should be able to build though))       
fi

AC_PATH_PROG(XML2C,xml2-config,no)
if test "$XML2C" = no
then
  AC_MSG_WARN(no xml2-config! please install libxml2) 
else
  CFLAGS="$CFLAGS `$XML2C --cflags`"
  LIBS="$LIBS `$XML2C --libs`"
fi

if test "$GCC"x = yesx; then
  CFLAGS="$CFLAGS $CFXTRA"
fi

dnl Checks for libraries.

AC_CHECK_LIB(m,pow)
AC_CHECK_LIB(png,png_create_read_struct,,)
AC_SEARCH_LIBS(iconv,iconv)

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(glob.h)
AC_CHECK_HEADERS(search.h)
AC_CHECK_HEADERS(iconv.h)
AC_CHECK_HEADERS(png.h)

dnl One of these may have htons

AC_CHECK_HEADERS(arpa/inet.h)
AC_CHECK_HEADERS(netinet/in.h)

dnl Checks for library functions.

AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(glob)
AC_CHECK_FUNCS(tsearch)
AC_CHECK_FUNCS(htons)
AC_CHECK_FUNCS(ntohs)

AC_DEFINE(VERSION,PACKAGE_VERSION,"version of package")

dnl Make a config.h

AC_CONFIG_HEADER(src/common/config.h)

dnl Create Makefile data

AC_OUTPUT([Makefile src/Common.mk])






